<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Video Surveillance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="startSurveillance">Start Surveillance</string>
    <string name="title_activity_start_settings">StartSettings</string>
    <string name="emergency">Emergency Settings</string>
    <string name="phone">Phone</string>
    <string name="sms">SMS</string> 
    <string name="captureScene">Capture Intrusion Scene</string>
    <string name="captureVideo">Capture Intrusion Video</string>
    <string name="captureLimit">Intrusion capture Limit</string>
    <string name="phoneButton">User Contact Details</string>
    <string name="VideoSurveillance">Video Surveillance</string>
    <string name="userDetail"> User Details</string>
    <string name="alert"> Alert Type</string>
    <string name="type">Capture </string>
   <string name="videoBtn">Take picture</string>
   <string name="camera_setup">Place your camera</string>
   <string name="loginTitle">Login</string>
   <string name="username">User Name</string>
   <string name="password">Password</string>
   <string name="Login">Login</string>
  <string name="attempts">attempt left : </string>
  <string name="help">Help </string>
  <string name="logout">Logout </string>
  <string name="helper">Help </string>
  <string name="loginhelp">1. Login help </string>
  <string name="loginhelpcontent">Correct USERNAME and PASSWORD are essential for successful login to the application. The USERNAME and PASSWORD are developer generated and can not be changed during the runtime of application as it violates security of the application. </string>
<string name="surv">2. Surveillance help </string>
<string name="survcontent">Surveillance start after a countdown of 15 seconds. In this period of time the android device should be kept at secure location. The android device should be placed in the location where it captures a wide view of sucured area.</string>
<string name="usercontact">3. User contact help</string>
<string name="usercontactcontent">User contact number is the GSM mobile number  where the SMS  should be send after the intrusion.GSM number should be a valid 10 digit number  without a  STD code. The space is left blasnk if  the contact numbers are not required. </string>

<string name="smshelp">4. SMS help</string>
<string name="smshelpcontent">A switch preference is located in settings activity. If a user want to send SMS on the occurrence of intrusion the switch preference can be turned on and vice versa</string>

<string name="galleryhelp">5. Gallery View Help</string>
<string name="galleryhelpcontent">The images of intrusion are dynamically stored into gallery. There exist separate gallery for images and videos. Images or  videos can not be deleted from these galleries for security purpose.</string>

<string name="intrusionhelp">6. Intrusion Help</string>
<string name="intrusionhelpcontent">During intrusion a single image is captured which is followed by a continuos video recorder. This continuos video recorder can be stopped by calling the device.</string>










</resources>
