<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey"
    android:minHeight="50dip"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/btn_default_small"
        android:minHeight="80dip"
        android:minWidth="250dip"
        android:text="@string/startSurveillance"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_default_small"
        android:minHeight="80dip"
        android:minWidth="250dip"
        android:singleLine="true"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

      <Button
          android:id="@+id/button3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/button2"
          android:layout_below="@+id/button2"
          android:background="@android:drawable/btn_default_small"
          android:minHeight="80dip"
          android:minWidth="250dip"
          android:singleLine="true"
          android:text="@string/help"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="@android:color/black" />

      <Button
          android:id="@+id/button4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/button3"
          android:layout_below="@+id/button3"
          android:background="@android:drawable/btn_default_small"
          android:minHeight="80dip"
          android:minWidth="250dip"
          android:singleLine="true"
          android:text="@string/logout"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="@android:color/black" />

</RelativeLayout>


